developer/model-testing > developer/how-to

--- a/site/developer/how-to/feature-overview.qmd
+++ b/site/developer/how-to/feature-overview.qmd
@@ -5,5 +5,7 @@
 # USING THE VARIABLE MESSES UP THE SPACING ON THE PREVIEW TILE
 title: "Use {{< var validmind.developer >}} features"
 date: last-modified
+aliases:
+  - /developer/model-testing/feature-overview.html
 ---
 
