--- a/site/developer/how-to/test-sandbox.qmd
+++ b/site/developer/how-to/test-sandbox.qmd
@@ -6,6 +6,7 @@ title: "Test sandbox <sup>[beta]{.smallcaps}</sup>"
 date: last-modified
 aliases:
   - /guide/test-sandbox.html
+  - /developer/model-testing/test-sandbox.html
 ---
 
 <!--- TO DO
