--- a/site/developer/how-to/testing-overview.qmd
+++ b/site/developer/how-to/testing-overview.qmd
@@ -6,6 +6,7 @@ title: "Run tests and test suites"
 date: last-modified
 aliases:
   - /guide/testing-overview.html
+  - /developer/model-testing/testing-overview.html
 listing:
   - id: explore-tests
     type: grid
