--- a/site/developer/test-descriptions.qmd
+++ b/site/developer/test-descriptions.qmd
@@ -37,7 +37,7 @@ listing:
 Tests that are available as part of the {{< var validmind.developer >}}, grouped by type of validation or monitoring test.
 
 ::: {.callout}
-## {{< fa flask >}} [Try the test sandbox <sup>[beta]{.smallcaps}</sup>](model-testing/test-sandbox.qmd)
+## {{< fa flask >}} [Try the test sandbox <sup>[beta]{.smallcaps}</sup>](how-to/test-sandbox.qmd)
 
 Explore our interactive sandbox to see what tests are available in the {{< var validmind.developer >}}.
 :::
