--- a/site/developer/validmind-library.qmd
+++ b/site/developer/validmind-library.qmd
@@ -62,8 +62,8 @@ listing:
     sort: false
     fields: [title, description]
     contents:
-    - model-testing/testing-overview.qmd
-    - model-testing/feature-overview.qmd
+    - how-to/testing-overview.qmd
+    - how-to/feature-overview.qmd
   - id: code-samples
     grid-columns: 3
     type: grid
