Populate how-to notebooks -testing script

--- a/site/developer/how-to/feature-overview.qmd
+++ b/site/developer/how-to/feature-overview.qmd
@@ -5,7 +5,65 @@
 # USING THE VARIABLE MESSES UP THE SPACING ON THE PREVIEW TILE
 title: "Use {{< var validmind.developer >}} features"
 date: last-modified
-aliases:
-  - /developer/model-testing/feature-overview.html
+listing:
+  - id: data-and-datasets
+    type: grid
+    grid-columns: 2
+    image-placeholder: "jupyter-logo-rectangle.svg"
+    max-description-length: 350
+    image-height: "100%"
+    fields: [title, description, reading-time]
+    contents: "../../notebooks/how_to/data_and_datasets/*.ipynb"
+  - id: metrics
+    type: grid
+    grid-columns: 2
+    image-placeholder: "jupyter-logo-rectangle.svg"
+    max-description-length: 350
+    image-height: "100%"
+    fields: [title, description, reading-time]
+    contents: "../../notebooks/how_to/metrics/*.ipynb"
+  - id: scoring
+    type: grid
+    grid-columns: 2
+    image-placeholder: "jupyter-logo-rectangle.svg"
+    max-description-length: 350
+    image-height: "100%"
+    fields: [title, description, reading-time]
+    contents: "../../notebooks/how_to/scoring/*.ipynb"
+  - id: security
+    type: grid
+    grid-columns: 2
+    image-placeholder: "jupyter-logo-rectangle.svg"
+    max-description-length: 350
+    image-height: "100%"
+    fields: [title, description, reading-time]
+    contents: "../../notebooks/how_to/security/*.ipynb"
 ---
 
+We provide a range of Jupyter Notebook code samples demonstrating how to use the core features of the {{< var validmind.developer >}}.
+
+## Feature guides by topic
+
+:::{.panel-tabset}
+
+## Data and datasets
+
+:::{#data-and-datasets}
+:::
+
+## Metrics
+
+:::{#metrics}
+:::
+
+## Scoring
+
+:::{#scoring}
+:::
+
+## Security
+
+:::{#security}
+:::
+
+:::
