--- a/site/developer/how-to/feature-overview.qmd
+++ b/site/developer/how-to/feature-overview.qmd
@@ -6,6 +6,14 @@
 title: "Use {{< var validmind.developer >}} features"
 date: last-modified
 listing:
+  - id: tests
+    type: grid
+    grid-columns: 2
+    image-placeholder: "jupyter-logo-rectangle.svg"
+    max-description-length: 350
+    image-height: "100%"
+    fields: [title, description, reading-time]
+    contents: "../../notebooks/how_to/tests/**/*.ipynb"
   - id: data-and-datasets
     type: grid
     grid-columns: 2
@@ -42,9 +50,14 @@ listing:
 
 We provide a range of Jupyter Notebook code samples demonstrating how to use the core features of the {{< var validmind.developer >}}.
 
-## Feature guides by topic
+## How-to guides by topic
 
 :::{.panel-tabset}
+
+## Testing
+
+:::{#tests}
+:::
 
 ## Data and datasets
 
