--- a/site/developer/how-to/feature-overview.qmd
+++ b/site/developer/how-to/feature-overview.qmd
@@ -3,7 +3,7 @@
 # Refer to the LICENSE file in the root of this repository for details.
 # SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial
 # USING THE VARIABLE MESSES UP THE SPACING ON THE PREVIEW TILE
-title: "Use {{< var validmind.developer >}} features"
+title: "How to use {{< var validmind.developer >}} features"
 date: last-modified
 listing:
   - id: tests
