--- a/site/developer/how-to/testing-overview.qmd
+++ b/site/developer/how-to/testing-overview.qmd
@@ -2,7 +2,7 @@
 # Copyright © 2023-2026 ValidMind Inc. All rights reserved.
 # Refer to the LICENSE file in the root of this repository for details.
 # SPDX-License-Identifier: AGPL-3.0 AND ValidMind Commercial
-title: "Run tests and test suites"
+title: "How to run tests and test suites"
 date: last-modified
 aliases:
   - /guide/testing-overview.html
@@ -60,6 +60,14 @@ listing:
     contents:
     - ../../notebooks/how_to/tests/custom_tests/implement_custom_tests.ipynb
     - ../../notebooks/how_to/tests/custom_tests/integrate_external_test_providers.ipynb
+  - id: testing-next
+    type: grid
+    grid-columns: 2
+    max-description-length: 350
+    sort: false
+    fields: [title, description]
+    contents:
+    - feature-overview.qmd
 ---
 
 {{< var vm.product >}} provides many built-in tests and test suites, which help you produce documentation during stages of the model lifecycle, where you need to ensure that your work satisfies regulatory and risk management requirements.
@@ -150,4 +158,11 @@ Absolutely! {{< var vm.product >}} supports custom tests that you develop yourse
 We provide instructions with code examples that you can adapt:
 
 :::{#tests-custom}
+:::
+
+## What's next
+
+Learn more about using the other features of the {{< var validmind.developer >}}:
+
+:::{#testing-next}
 :::
