Notebook update & adjusting developer/supported-models.qmd

--- a/site/developer/supported-models.qmd
+++ b/site/developer/supported-models.qmd
@@ -10,13 +10,15 @@ aliases:
 listing:
   - id: next-models
     type: grid
+    grid-columns: 2
     max-description-length: 250
     sort: false
     fields: [title, description]
     contents:
-    - ../how-to/testing-overview.qmd
+    - /how-to/testing-overview.qmd
     - test-descriptions.qmd
-    - ../samples-jupyter-notebooks.qmd
+    - /how-to/feature-overview.qmd
+    - samples-jupyter-notebooks.qmd
 ---
 
 The {{< var validmind.developer >}} provides out-of-the-box support for testing and documentation for an array of model types and modeling packages.
