--- a/site/developer/how-to/feature-overview.qmd
+++ b/site/developer/how-to/feature-overview.qmd
@@ -21,7 +21,7 @@ listing:
     max-description-length: 350
     image-height: "100%"
     fields: [title, description, reading-time]
-    contents: "../../notebooks/how_to/data_and_datasets/*.ipynb"
+    contents: "../../notebooks/how_to/data_and_datasets/**/*.ipynb"
   - id: metrics
     type: grid
     grid-columns: 2
@@ -29,7 +29,7 @@ listing:
     max-description-length: 350
     image-height: "100%"
     fields: [title, description, reading-time]
-    contents: "../../notebooks/how_to/metrics/*.ipynb"
+    contents: "../../notebooks/how_to/metrics/**/*.ipynb"
   - id: scoring
     type: grid
     grid-columns: 2
@@ -37,7 +37,7 @@ listing:
     max-description-length: 350
     image-height: "100%"
     fields: [title, description, reading-time]
-    contents: "../../notebooks/how_to/scoring/*.ipynb"
+    contents: "../../notebooks/how_to/scoring/**/*.ipynb"
 ---
 
 We provide a range of Jupyter Notebook code samples demonstrating how to use the core features of the {{< var validmind.developer >}}.
