--- a/site/developer/how-to/testing-overview.qmd
+++ b/site/developer/how-to/testing-overview.qmd
@@ -68,6 +68,7 @@ listing:
     fields: [title, description]
     contents:
     - feature-overview.qmd
+    - ../samples-jupyter-notebooks.qmd
 ---
 
 {{< var vm.product >}} provides many built-in tests and test suites, which help you produce documentation during stages of the model lifecycle, where you need to ensure that your work satisfies regulatory and risk management requirements.
@@ -162,7 +163,7 @@ We provide instructions with code examples that you can adapt:
 
 ## What's next
 
-Learn more about using the other features of the {{< var validmind.developer >}}:
+Learn more about using the other features of the {{< var validmind.developer >}} and browse our code samples by use case:
 
 :::{#testing-next}
 :::
