--- a/site/developer/how-to/feature-overview.qmd
+++ b/site/developer/how-to/feature-overview.qmd
@@ -40,9 +40,9 @@ listing:
     contents: "../../notebooks/how_to/scoring/**/*.ipynb"
 ---
 
-We provide a range of Jupyter Notebook code samples demonstrating how to use the core features of the {{< var validmind.developer >}}.
+Browse our range of Jupyter Notebooks demonstrating how to use the core features of the {{< var validmind.developer >}}. Use these how-to notebooks to get familiar with the {{< var vm.developer >}}'s capabilities and apply them to your own use cases.
 
-## How-to guides by topic
+## How-to by topic
 
 :::{.panel-tabset}
 
