--- a/site/developer/validmind-library.qmd
+++ b/site/developer/validmind-library.qmd
@@ -153,12 +153,12 @@ Learn how to use the comprehensive out-of-the-box tests and test suites, and oth
 
 :::: {.flex .flex-wrap .justify-around}
 
-::: {.w-75-ns}
+::: {.w-60-ns}
 Try our Jupyter Notebook code samples that showcase the capabilities of the {{< var validmind.developer >}} and cover a variety of sample use cases.
 :::
 
-::: {.w-25-ns .tr}
-[Code samples<br>by use case](samples-jupyter-notebooks.qmd){.button .button-green}
+::: {.w-40-ns .tr}
+[Code samples by use case](samples-jupyter-notebooks.qmd){.button .button-green}
 
 :::
 
