--- a/site/developer/how-to/testing-overview.qmd
+++ b/site/developer/how-to/testing-overview.qmd
@@ -136,7 +136,7 @@ Next, learn how to use the {{< var validmind.developer >}} to run tests on datas
 :::{#configure-tests}
 :::
 
-### Documentation tests
+### Using tests in documentation
 
 :::{#documentation-tests}
 :::
