--- a/site/faq/faq-testing.qmd
+++ b/site/faq/faq-testing.qmd
@@ -59,7 +59,7 @@ To log tests as a developer with the {{< var validmind.developer >}}:
 ::: {.callout}
 ## Want to learn how to use {{< var vm.product >}} as a developer?
 
-Check our our introductory series — [**{{< var vm.product >}} for model development**](/developer/validmind-library.qmd#for-model-development)
+Check out our introductory series — [**{{< var vm.product >}} for model development**](/developer/validmind-library.qmd#for-model-development)
 :::
 
 ## How do I log tests as a validator?
