--- a/site/faq/faq-testing.qmd
+++ b/site/faq/faq-testing.qmd
@@ -74,7 +74,7 @@ To log tests as a validator with the {{< var validmind.developer >}}:
 ::: {.callout}
 ## Want to learn how to use {{< var vm.product >}} as a validator?
 
-Check our our introductory series — [**{{< var vm.product >}} for model validation**](/developer/validmind-library.qmd#for-model-validation)
+Check out our introductory series — [**{{< var vm.product >}} for model validation**](/developer/validmind-library.qmd#for-model-validation)
 :::
 
 {{< include _faq-explainability.qmd >}}
