--- a/site/guide/templates/manage-model-documents.qmd
+++ b/site/guide/templates/manage-model-documents.qmd
@@ -113,7 +113,10 @@ To upload a PDF without converting it to an editable template:
 Depending on the size and complexity of your PDF, conversion can take anywhere from a few seconds to several minutes. You can continue working in the {{< var validmind.platform >}} while the conversion runs.
 :::
 
-#### Best practices for PDF imports
+::: {.callout-button .pl4 .nt4}
+::: {.callout collapse="true" appearance="minimal"}
+
+### Best practices for PDF imports
 
 For the best conversion results, keep the following in mind when preparing your PDF:
 
@@ -123,7 +126,7 @@ For the best conversion results, keep the following in mind when preparing your 
 - **Check file size.** Large PDFs with many pages take longer to process. Consider splitting very large documents into smaller sections before uploading if conversion times are a concern.
 - **Review after conversion.** Always review the generated template after conversion completes to verify that sections and content were extracted correctly.
 
-#### Examples of successful imports
+## Examples of successful imports
 
 The following types of PDF documents typically produce good conversion results:
 
@@ -132,7 +135,7 @@ The following types of PDF documents typically produce good conversion results:
 - Risk assessments and policy documents organized with numbered sections.
 - Regulatory submissions with a table of contents and consistent formatting.
 
-#### Troubleshoot PDF import failures
+## Troubleshooting PDF import failures
 
 If a PDF conversion fails or produces unexpected results, try the following:
 
@@ -146,6 +149,9 @@ If a PDF conversion fails or produces unexpected results, try the following:
 
 ::: {.callout-important title="You can cancel a stuck conversion at any time."}
 If a conversion appears to be stuck, use the **Cancel** option on the progress banner to stop processing and try again with a revised PDF.
+:::
+
+:::
 :::
 
 ## Edit model documents
