--- a/site/guide/templates/manage-model-documents.qmd
+++ b/site/guide/templates/manage-model-documents.qmd
@@ -47,6 +47,10 @@ Convert a Portable Document Format `.pdf` file (PDF) into an editable document i
 
 {{< var vm.product >}} automatically extracts the structure and content from your PDF, generates a document template that maps to the extracted sections, and populates each section in the template with the contents from your original document.
 
+::: {.callout title="PDF conversion runs in the background."}
+Depending on the size and complexity of your PDF, conversion can take anywhere from a few seconds to several minutes. You can continue working in the {{< var validmind.platform >}} while the conversion runs.
+:::
+
 ::::::: {.panel-tabset}
 
 ##### Convert PDF to editable template
@@ -109,47 +113,61 @@ To upload a PDF without converting it to an editable template:
 
 :::::
 
-::: {.callout title="PDF conversion runs in the background."}
-Depending on the size and complexity of your PDF, conversion can take anywhere from a few seconds to several minutes. You can continue working in the {{< var validmind.platform >}} while the conversion runs.
-:::
+<br>
 
 ::: {.callout-button .pl4 .nt4}
 ::: {.callout collapse="true" appearance="minimal"}
 
-### Best practices for PDF imports
+### How do I get the best results when converting PDFs into editable documents in the {{< var validmind.platform >}}?
 
 For the best conversion results, keep the following in mind when preparing your PDF:
 
-- **Use text-based PDFs.** PDFs that contain selectable text convert most reliably. Scanned image-only PDFs may produce poor or empty results.
-- **Use clear heading hierarchy.** Documents with well-defined headings (H1, H2, H3) produce more accurate section mappings in the generated template.
-- **Keep formatting simple.** Standard paragraphs, lists, and tables convert well. Complex layouts such as multi-column text, sidebars, or heavily nested tables may not be preserved accurately.
-- **Check file size.** Large PDFs with many pages take longer to process. Consider splitting very large documents into smaller sections before uploading if conversion times are a concern.
-- **Review after conversion.** Always review the generated template after conversion completes to verify that sections and content were extracted correctly.
+- **Use text-based PDFs** — PDFs that contain selectable text convert most reliably. Scanned image-only PDFs may produce poor or empty results.
+- **Use clear heading hierarchy** — Documents with well-defined headings (H1, H2, H3) produce more accurate section mappings in the generated template.
+- **Keep formatting simple** — Standard paragraphs, lists, and tables convert well. Complex layouts such as multi-column text, sidebars, or heavily nested tables may not be preserved accurately.
+- **Check file size** — Large PDFs with many pages take longer to process. Consider splitting very large documents into smaller sections before uploading if conversion times are a concern.
+- **Review after conversion** — Always review the generated template after conversion completes to verify that sections and content were extracted correctly.
 
-## Examples of successful imports
+<!-- ## Examples of successful imports
 
 The following types of PDF documents typically produce good conversion results:
 
 - Model documentation reports with clearly labeled sections such as executive summary, methodology, data description, and results.
 - Validation reports that follow a standard heading structure.
 - Risk assessments and policy documents organized with numbered sections.
-- Regulatory submissions with a table of contents and consistent formatting.
+- Regulatory submissions with a table of contents and consistent formatting. -->
 
-## Troubleshooting PDF import failures
+## Troubleshooting
 
 If a PDF conversion fails or produces unexpected results, try the following:
 
-| Issue | Possible cause | Resolution |
-|-------|---------------|------------|
-| Conversion fails immediately | The file may be corrupted or password-protected. | Verify the PDF opens correctly in a local PDF viewer. Remove any password protection before uploading. |
-| Conversion completes but sections are empty | The PDF may contain scanned images instead of text. | Use OCR software to convert the scanned PDF to a text-based PDF before uploading. |
-| Sections are mapped incorrectly | The PDF may lack consistent heading styles. | Review the PDF structure and ensure headings are formatted distinctly from body text. After conversion, manually adjust section content as needed. |
-| Conversion takes too long | The PDF may be very large or contain complex elements. | Try uploading a simplified version of the PDF. Remove large embedded images or unnecessary appendices. |
-| Conversion status shows [failed]{.bubble .bubble-red} | An unexpected error occurred during processing. | Re-upload the PDF file and try the conversion again. If the issue persists, contact your {{< var validmind.platform >}} administrator. |
+Conversion fails immediately
+: - The file may be corrupted or password-protected.
+- Verify the PDF opens correctly in a local PDF viewer. Remove any password protection before uploading.
 
-::: {.callout-important title="You can cancel a stuck conversion at any time."}
+Conversion completes but sections are empty
+: - The PDF may contain scanned images instead of text.
+- Use OCR software to convert the scanned PDF to a text-based PDF before uploading.
+
+Sections are mapped incorrectly
+: - The PDF may lack consistent heading styles.
+- Review the PDF structure and ensure headings are formatted distinctly from body text. After conversion, manually adjust section content as needed.
+
+Conversion takes too long
+: - The PDF may be very large or contain complex elements.
+- Try uploading a simplified version of the PDF. Remove large embedded images or unnecessary appendices.
+
+Conversion status shows [failed]{.bubble .bubble-red}
+: - An unexpected error occurred during processing.
+- Re-upload the PDF file and try the conversion again. If the issue persists, contact your {{< var validmind.platform >}} administrator.
+
+::: {.embed-tip}
+### My PDF conversion is stuck. What can I do?
+
 If a conversion appears to be stuck, use the **Cancel** option on the progress banner to stop processing and try again with a revised PDF.
 :::
+
+<br>
 
 :::
 :::
