--- a/site/training/ai-governance/managing-ai-use-cases.qmd
+++ b/site/training/ai-governance/managing-ai-use-cases.qmd
@@ -15,7 +15,7 @@ format:
     help: true
     controls-back-arrows: visible
     transition: slide
-    theme: [default, ../assets/slides.scss, ./slides.scss]
+    theme: [../assets/slides.scss, ../assets/use-cases.scss]
     slide-number: true
     chalkboard: false
     preview-links: auto
@@ -73,9 +73,10 @@ Use case inventories help you:
 
 :::: {.columns}
 
-::: {.column width="50%" .pr3}
+::: {.column width="50%" .pr3 .f2}
 Configure custom inventory fields for AI governance:
 
+::: {.f4}
 | Field type | Examples |
 |------------|----------|
 | Classification | Risk tier, impact level |
@@ -84,8 +85,10 @@ Configure custom inventory fields for AI governance:
 | Status | Lifecycle stage, approval status |
 :::
 
-::: {.column width="50%" .pl3}
-![Custom fields configuration](custom-fields.png){fig-alt="A screenshot showing custom field configuration in ValidMind settings" .screenshot}
+:::
+
+::: {.column width="50%" .pl3 .tilt-left}
+{{< video src="custom-fields.mp4" title="ConfigureCustom fields configuration" fig-alt="A short video showing custom field configuration in ValidMind settings">}}
 :::
 
 ::::
@@ -94,16 +97,16 @@ Configure custom inventory fields for AI governance:
 
 :::: {.columns}
 
-::: {.column width="40%" .pr3}
+::: {.column width="60%" .pr3 .tilt-right .mt5}
+{{< video src="intentory-in-action.mp4" title="The inventory in action" fig-alt="A short video showing the ValidMind inventory with AI use cases displaying tier, model owner, and model stage fields">}}
+:::
+
+::: {.column width="40%" .pl3 .nt2 .f2}
 The **{{< fa cubes >}} Inventory** displays AI use cases with:
 
 - **Tier** — Risk classification level
 - **Model owner** — Accountability assignment
 - **Model stage** — Current lifecycle stage
-:::
-
-::: {.column width="60%" .pl3}
-![Model inventory overview](inventory-overview.png){fig-alt="A screenshot showing the ValidMind inventory with AI use cases displaying tier, model owner, and model stage fields" .screenshot}
 :::
 
 ::::
@@ -129,13 +132,13 @@ Align your classification to relevant regulations:
 |-----------|----------------------|
 | EU AI Act | Prohibited, high-risk, limited-risk, minimal-risk |
 | Internal | Critical, high, medium, low |
-| Tiered | Tier 1, Tier 2, Tier 3 |
+| Tiered | Tier 1, Tier 2, Tier 3, Tier 4 |
 
 ## Configuring risk tiers {.center}
 
 :::: {.columns}
 
-::: {.column width="50%" .pr3}
+::: {.column width="50%" .pr3 .f2}
 In {{< var vm.product >}}, you can:
 
 1. Add custom fields for risk classification
@@ -144,8 +147,8 @@ In {{< var vm.product >}}, you can:
 4. Generate reports filtered by risk level
 :::
 
-::: {.column width="50%" .pl3}
-![Risk tier configuration](risk-tiers.png){fig-alt="A screenshot showing risk tier field configuration in ValidMind" .screenshot}
+::: {.column width="50%" .pl3 .mt4}
+![Risk overview](analytics-risk-overview.png){fig-alt="A screenshot showing risk tier field configuration in ValidMind" .screenshot .tilt-left}
 :::
 
 ::::
