--- a/site/training/ai-governance/understanding-ai-governance.qmd
+++ b/site/training/ai-governance/understanding-ai-governance.qmd
@@ -15,7 +15,7 @@ format:
     help: true
     controls-back-arrows: visible
     transition: slide
-    theme: [default, ../assets/slides.scss, ./slides.scss]
+    theme: [../assets/slides.scss, ../assets/use-cases.scss]
     slide-number: true
     chalkboard: false
     preview-links: auto
@@ -180,15 +180,17 @@ Organizations may coordinate these use cases or manage them separately.
 ::: {.column width="50%" .pr3}
 {{< var vm.product >}} supports AI governance through:
 
+::: {.f3}
 - **Inventory** — Track AI systems and use cases
 - **Custom fields** — Configure risk tiers, impact levels, ownership
 - **Workflows** — Intake, approval, and deployment processes
 - **Documentation** — Generate governance documentation
 - **Dashboards** — Monitor compliance across your portfolio
 :::
+:::
 
-::: {.column width="50%" .pl3}
-![The ValidMind Platform](platform-orientation.png){fig-alt="A screenshot of the ValidMind Platform showing the main interface" .screenshot}
+::: {.column width="50%" .pl3 .pt4}
+![The Inventory](inventory-overview.png){fig-alt="A screenshot of the ValidMind Platform showing the main interface" .screenshot .tilt-left}
 :::
 
 ::::
