--- a/site/training/ai-governance/configuring-ai-workflows.qmd
+++ b/site/training/ai-governance/configuring-ai-workflows.qmd
@@ -15,7 +15,7 @@ format:
     help: true
     controls-back-arrows: visible
     transition: slide
-    theme: [default, ../assets/slides.scss, ./slides.scss]
+    theme: [../assets/slides.scss, ../assets/use-cases.scss]
     slide-number: true
     chalkboard: false
     preview-links: auto
