Edits, add images

--- a/site/training/ai-governance/configuring-ai-workflows.qmd
+++ b/site/training/ai-governance/configuring-ai-workflows.qmd
@@ -78,19 +78,25 @@ In {{< var vm.product >}}:
 3. Configure automatic notifications
 4. Route new registrations for review
 
-## Example: Risk classification workflow {.center}
+## [Example: Risk classification workflow]{.f2} {.center .tc}
 
-![Risk Classification Workflow](risk-classification-workflow.png){fig-alt="A screenshot showing a Risk Classification Workflow with model stage changes, user actions, approvals, and condition branches for different risk levels" .screenshot}
+::: {.tc}
+![{{< fa magnifying-glass >}}&ensp;[Click to enlarge]{.f3}](risk-classification-workflow.png){width="35%" fig-alt="A screenshot showing a Risk Classification Workflow with model stage changes, user actions, approvals, and condition branches for different risk levels" .screenshot}
+:::
 
 ## Risk classification workflow steps {.center}
 
-This intake workflow demonstrates key AI governance patterns:
+::: {.f2}
+This example intake workflow demonstrates key AI governance patterns:
+:::
 
+::: {.f3}
 - **Model Stage Change** — Sets model stage to [In Risk Classification]{.bubble}
 - **User Action v2** — Collects risk classification materials with deadline
 - **Broadcast** — Notifies stakeholders of pending risk rating
 - **Approval** — Routes to Model Validation Governance for review
 - **Condition Branch** — Different paths for High Risk, Medium Risk, or Default
+:::
 
 # Approval workflows {background-color="#083E44" background-image="/training/assets/digitalspace-colours.svg"}
 
@@ -109,11 +115,13 @@ They implement:
 
 Consider these design principles:
 
+::: {.f2}
 | Risk level | Approval requirements |
 |------------|----------------------|
 | High-risk | Multiple approvers, governance committee |
 | Medium-risk | Manager + compliance review |
 | Low-risk | Single approver |
+:::
 
 ## Configuring approvals {.center}
 
@@ -129,7 +137,7 @@ Consider these design principles:
 :::
 
 ::: {.column width="50%" .pl3}
-![Approval step configuration](approval-config.png){fig-alt="A screenshot showing approval step configuration with role selection in the workflow builder" .screenshot}
+![Approval step configuration](workflow-approval-step-configuration.png){fig-alt="A screenshot showing approval step configuration with role selection in the workflow builder" .screenshot .tilt-left}
 :::
 
 ::::
