--- a/site/training/ai-governance/configuring-ai-workflows.qmd
+++ b/site/training/ai-governance/configuring-ai-workflows.qmd
@@ -56,7 +56,7 @@ This third module is part of a four-part series:
 
 {{< include /training/assets/_revealjs-navigation.qmd >}}
 
-# Intake workflows {background-color="#083E44" background-image="/training/assets/digitalspace-colours.svg"}
+# Intake workflows {background-image="../assets/digitalspace-colours.svg"}
 
 ## What is an intake workflow? {.center}
 
@@ -98,7 +98,7 @@ This example intake workflow demonstrates key AI governance patterns:
 - **Condition Branch** — Different paths for High Risk, Medium Risk, or Default
 :::
 
-# Approval workflows {background-color="#083E44" background-image="/training/assets/digitalspace-colours.svg"}
+# Approval workflows {background-image="../assets/digitalspace-colours.svg"}
 
 ## Purpose of approval workflows {.center}
 
@@ -142,7 +142,7 @@ Consider these design principles:
 
 ::::
 
-# Human oversight controls {background-color="#083E44" background-image="/training/assets/digitalspace-colours.svg"}
+# Human oversight controls {background-image="../assets/digitalspace-colours.svg"}
 
 ## Regulatory context {.center}
 
@@ -173,7 +173,7 @@ Set up periodic review workflows:
 3. Track review completion
 4. Escalate overdue reviews
 
-# Escalations {background-color="#083E44" background-image="/training/assets/digitalspace-colours.svg"}
+# Escalations {background-image="../assets/digitalspace-colours.svg"}
 
 ## Escalation paths {.center}
 
