--- a/site/training/ai-governance/understanding-ai-governance.qmd
+++ b/site/training/ai-governance/understanding-ai-governance.qmd
@@ -57,7 +57,7 @@ This first module is part of a four-part series:
 
 {{< include /training/assets/_revealjs-navigation.qmd >}}
 
-# What is AI governance? {background-color="#083E44" background-image="/training/assets/digitalspace-colours.svg"}
+# What is AI governance? {background-image="../assets/digitalspace-colours.svg"}
 
 ## Defining AI governance {.center}
 
@@ -95,7 +95,7 @@ In AI governance, the primary unit of management is the **AI system** or **AI us
 
 ::::
 
-# AI governance vs MRM {background-color="#083E44" background-image="/training/assets/digitalspace-colours.svg"}
+# AI governance vs MRM {background-image="../assets/digitalspace-colours.svg"}
 
 ## Parallel use cases {.center}
 
@@ -120,7 +120,7 @@ The overlap may produce shared artifacts:
 
 Organizations may coordinate these use cases or manage them separately.
 
-# Key terminology {background-color="#083E44" background-image="/training/assets/digitalspace-colours.svg"}
+# Key terminology {background-image="../assets/digitalspace-colours.svg"}
 
 ## AI governance terms {.center}
 
@@ -171,7 +171,7 @@ Organizations may coordinate these use cases or manage them separately.
 
 ::::
 
-# Platform orientation {background-color="#083E44" background-image="/training/assets/digitalspace-colours.svg"}
+# Platform orientation {background-image="../assets/digitalspace-colours.svg"}
 
 ## {{< var vm.product >}} for AI governance {.center}
 
